static/css/joel.css
/* ... */
html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--color-background-primary);
  font-family: var(--font-text);
  color: var(--color-text-primary);
  text-rendering: optimizeLegibility;
}


main{
  display: grid;
  grid-template-columns: 1fr var(--reader-width) 1fr;
}

main > * {
  grid-column: 2;
}

#map {
  width: 100%;
  aspect-ratio: 5 / 3;
}

/* ----------------------------------------
  _      _       _     _     _____             _    
 | |    (_)     | |   | |   |  __ \           | |   
 | |     _  __ _| |__ | |_  | |  | | __ _ _ __| | __
 | |    | |/ _` | '_ \| __| | |  | |/ _` | '__| |/ /
 | |____| | (_| | | | | |_  | |__| | (_| | |  |   < 
 |______|_|\__, |_| |_|\__| |_____/ \__,_|_|  |_|\_\
            __/ |                                   
           |___/
sec:lightdark
---------------------------------------- */
body.dark {
  --color-accent: #50a0e6;

  --color-link: #50a0e6;
  --color-link-hover: #aed3f3;
  --color-link-visited: #50a0e6;
  
  --color-text-primary: #f7f7f7;
  --color-text-secondary: #aaaaaa;
  
  --color-background-primary: #1d1d1d;
  --color-background-secondary: #303030;

  --color-background-description: #23364b;

  --color-dark-background: #000000;
  --color-dark-text: #f3f3f3;  
  
  --color-code-background: #20272c;

  --color-quote: #8fe27b;

  --color-heading1: #ffffff;
  --color-heading2: #ffffff;

  --color-category-travel: #ce7501;
  --color-category-text: #ffffff;
}

body.dark header::before,
body.dark footer::before {
  background-color: var(--color-banner-dark);
}

body.dark header img.icon {
  filter: invert(53%) sepia(89%) saturate(352%) hue-rotate(169deg) brightness(93%) contrast(93%);
}

/*
  --color-lightdark-light: #d47f00;
  --color-lightdark-light-bg: #ffd28e;
  --color-lightdark-dark: #252525;
  --color-lightdark-dark-bg: #585858;
*/

label.container{
  position: relative;

  height: 32px;
  width: 32px;
  display: block;
  cursor: pointer;
}

label.container input {
  position: absolute;
  opacity: 0;

  height: 100%;
  width: 100%;
}

label.container .checkmark {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;

  border-radius: 50%;
  box-shadow: inset 0px 0px 0px 1px var(--color-lightdark-light);
  background-color: var(--color-lightdark-light-bg);

}

label .checkmark:after {
  content: '';
  height: 24px;
  width: 24px;
  mask: url('/assets/icons/sun.svg') center no-repeat;
  background-color: var(--color-lightdark-light);
  padding: 4px;
  display: block;
}

label.container input:checked ~ .checkmark {
  box-shadow: inset 0px 0px 0px 1px var(--color-lightdark-dark);
  background-color: var(--color-lightdark-dark-bg);
}

label input:checked ~  .checkmark:after {
  mask: url('/assets/icons/moon.svg') center no-repeat;
  background-color: var(--color-lightdark-dark);
}


/* ----------------------------------------
  _    _                _           
 | |  | |              | |          
 | |__| | ___  __ _  __| | ___ _ __ 
 |  __  |/ _ \/ _` |/ _` |/ _ \ '__|
 | |  | |  __/ (_| | (_| |  __/ |   
 |_|  |_|\___|\__,_|\__,_|\___|_|   
sec:header
---------------------------------------- */                                    
                                    

header > h1 {
  font-family: var(--font-title);
  font-weight: 600;
  text-decoration: none;
  font-size: 40px;
  margin: 0;
}

header nav {
  height: fit-content;
  width: fit-content;

  display: flex;
  flex-flow: row;
  align-items: center;
  gap: 3px;

  border: solid 1px var(--color-background-secondary);
  border-radius: 8px;
  padding: 3px;
  background-color: var(--color-background-primary);

}

header::before, footer::before {
  position: absolute;
  content: '';
  height: 100%; width: 100%;
  mask: url("/assets/header.svg") center no-repeat;
  mask-size: cover;
  background-color: var(--color-banner-light);
  z-index: -1;
}

header {
  position: relative;
  height: 120px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: column;
  gap: 5px;
}



/* ----------------------------------------
  ______          _            
 |  ____|        | |           
 | |__ ___   ___ | |_ ___ _ __ 
 |  __/ _ \ / _ \| __/ _ \ '__|
 | | | (_) | (_) | ||  __/ |   
 |_|  \___/ \___/ \__\___|_|   
sec:footer
---------------------------------------- */                                    

footer {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 50px 0;
  text-align: center;
  font-size: 0.9rem;
  font-family: var(--font-sansserif);

  margin-top: 30px;
}

footer span {
  padding: 3px 4px;
  border-radius: 5px;
  background-color: var(--color-background-primary);
}

footer a {
  text-decoration: none;
}


/* ----------------------------------------
 _______        _   
|__   __|      | |  
   | | _____  _| |_ 
   | |/ _ \ \/ / __|
   | |  __/>  <| |_ 
   |_|\___/_/\_\\__|
sec:text
---------------------------------------- */

p,
blockquote,
li,
table,
input,
figcaption {
  font-family: var(--font-text);
  font-weight: var(--weight-text);
  font-size: 1em;
  line-height: 1.6em;
}

strong {
  font-weight: bold;
}

h1, h2, h3, h4 {
  font-family: var(--font-heading);
  font-weight: 600;
  transition: 100ms border ease-in-out;
}

h1 {
  font-size: 2.2em;
  font-weight: bold;

  color: var(--color-heading1);
  

  margin-top: 20px;
  margin-bottom: 10px;
}

h2 {
  color: var(--color-heading2);
  font-size: 1.8em;
}

h3 {
  font-size: 1.4em;
}

h4 {
  font-size: 1.1em;
}

h2,
h3,
h4 {
  margin-top: 0.75em;
  margin-bottom: 10px;
}

h1:target,
h2:target,
h3:target,
h4:target {
  padding-left: 30px;
  position: relative;
  text-decoration: underline wavy var(--color-accent) 2px;
}
/* ... */

